--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ p{
 }
 
 body{
+    background-image: url(Asset/mobile_wallpaper.jfif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100%;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     max-width: 800px;
@@ -133,7 +138,7 @@ body{
 }
 
 .five-day-forecast-container .day-wise-forecast .min-temp{
-    opacity: 50%;
+    opacity: 70%;
 }
 
 .five-day-forecast-container .day-wise-forecast .max-temp{
@@ -161,6 +166,13 @@ body{
 }
 
 @media (width>=650px){
+    body{
+        background-image: url(Asset/desktop-wallpaper.jfif);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 100%;
+    }
     .container{
         grid-template-columns: repeat(4,1fr);
         grid-template-areas:
